# deadlift

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/service/: Cargo.toml
crates/service/migrations/2024-05-29-202154_add-modules/: up.sql
crates/service/migrations/2024-06-07-164733_add-workflows/: down.sql  up.sql
crates/service/migrations/2024-06-25-020743_add-workflow-modules/: down.sql  up.sql
crates/service/src/: lib.rs  main.rs  schema.rs
crates/service/src/modules/: engine.rs  handlers.rs  mod.rs  module.rs
crates/service/src/services/: db.rs
crates/service/src/workflows/: handlers.rs  mod.rs  module.rs  workflow.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
examples/calculator/: add_ten.wasm  main.rs  multiply_by_five.wasm
examples/calculator/add_ten/: Cargo.toml
examples/calculator/add_ten/src/: lib.rs
examples/calculator/multiply_by_five/: Cargo.toml
examples/calculator/multiply_by_five/src/: lib.rs
examples/calculator/src/: main.rs
examples/camara-project/create_qod_session/: Cargo.toml
examples/camara-project/create_qod_session/src/: lib.rs
examples/camara-project/src/: main.rs
examples/camara-project/static/: index.html
examples/realworld-deadlift/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  seed-deadlift-db.cjs  vite.config.js
examples/realworld-deadlift/src/lib/: api.js
examples/realworld-deadlift/wasm-fetch/: Cargo.toml
examples/realworld-deadlift/wasm-fetch-filter/: Cargo.toml
examples/realworld-deadlift/wasm-fetch-filter/src/: lib.rs
examples/realworld-deadlift/wasm-fetch/src/: lib.rs
examples/realworld-deadlift/wasm-send-email-notification/: Cargo.toml
examples/realworld-deadlift/wasm-send-email-notification/src/: lib.rs
migrations/2024-06-07-164733_add-workflows/: up.sql
src/: main.rs  schema.rs
src/modules/: handlers.rs  mod.rs  module.rs
src/services/: db.rs
src/workflows/: handlers.rs  mod.rs  workflow.rs
