[package]
name = "deadlift"
description = "Deadlift workspace"
publish = false
autoexamples = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
deadlift-service = { path = "crates/service" }
deadlift-macro = { path = "crates/macro" }
deadlift-util = { path = "crates/util" }

[workspace]
members = [
  "crates/service",
  "crates/macro",
  "crates/util"
]
resolver = "2"

[workspace.package]
authors = ["ZeroSync <alex.dunne@zerosync.co>"]
edition = "2021"
homepage = "https://zerosync.co/"
license = "MIT"
repository = "https://github.com/zerosync-co/deadlift"
rust-version = "1.77"
version = "0.0.1"

[workspace.dependencies]
deadlift-macro = { path = "./crates/macro" }
deadlift-util = { path = "./crates/util" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
serde_json = "1.0.117"
actix-web = "4.7.0"
actix-files = "0.6.6"

[[example]]
name = "calculator"
path = "examples/calculator/src/main.rs"

[[example]]
name = "camara-project"
path = "examples/camara-project/src/main.rs"
