[package]
name = "deadlift-macro"
description = "Rust macros for assisting module development"
# categories = ["wasm"]
# keywords = ["wasm", "webassembly", "integrations"]
# readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
