[package]
name = "deadlift-service"
description = "High-performance WebAssembly integration service"
# categories = ["wasm"]
# keywords = ["wasm", "webassembly", "integrations"]
# readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
once_cell = "1.19.0"
serde = "1.0.203"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
actix-web = "4.6.0"
diesel = { version = "2.1.6", features = [
    "sqlite",
    "r2d2",
    "uuid",
    "chrono",
    "serde_json",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
serde_json = "1.0.117"
byteorder = "1.5.0"
eyre = "0.6.12"
wasmer-wasix = "0.9"
wasmer = "4.0"
wasmer-cache = "4.0"
rmp-serde = "1.3.0"
crossbeam-channel = "0.5.6"
ctrlc = "3.4.4"
async-nats = "0.35.1"
actix-cors = "0.7.0"
