[package]
name = "create_qod_session"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.4", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
] }
