[package]
name = "wasm-fetch-filter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.117"
deadlift-util = { path = "../../../crates/util" }
