[package]
name = "wasm-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.4", features = [
  "Response",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ResponseInit",
  "Headers"
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
