[package]
name = "wasm-send-email-notification"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.117"
extism-pdk = "1.2.0"
serde_urlencoded = "0.7"
